# django-admin-reset

./: .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: tox.yml
django_admin_reset/: admin.py
django_admin_reset/locale/hu/LC_MESSAGES/: django.po
django_admin_reset/templates/admin/: add_user_form.html  change_user.html  password_reset_url.html
django_admin_reset/templates/auth/widgets/: read_only_password_hash.html
django_admin_reset/tests/: password_reset_test.py  settings.py
docs/: conf.py
