[project]
name = "django-admin-reset"
dynamic = ["version"]
description = "Django admin password reset"
readme = "README.rst"
authors = [{ name = "Tibor Hári", email = "hartib@gmail.com" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9, <4"
dependencies = ["django>4.2,<6"]

[project.optional-dependencies]
testing = [
  "flake8~=6.0.0",
  "pytest~=7.3.1",
  "pytest-cov~=4.1.0",
  "pytest-django~=4.5.2",
  "tox~=4.5.2",
]
docs = ["sphinx~=7.3.7", "sphinx_rtd_theme~=2.0.0"]
babel = ["babel~=2.17.0"]

[project.urls]
Homepage = "https://github.com/tiborhari/django-admin-reset/"
Repository = "https://github.com/tiborhari/django-admin-reset.git"
"Bug Tracker" = "https://github.com/tiborhari/django-admin-reset/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
dynamic.version = { attr = "django_admin_reset.__version__" }
include-package-data = false
packages.find.include = ["django_admin_reset*"]
packages.find.exclude = ["django_admin_reset.tests*"]
package-data.django_admin_reset = ["templates/admin/*.html", "templates/auth/widgets/*.html", "locale/*/LC_MESSAGES/*.[mp]o"]
